[package]
name = "server"
version = "0.1.0"
authors = ["Edward Lee <edwardlee.259@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2", features=["full"] }
warp = "0.2.5"
log = "0.4"
pretty_env_logger = "0.4.0"