[package]
name = "server"
version = "0.1.0"
authors = ["Edward Lee <edwardlee.259@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2", features=["full"] }
serde = { version="1.0", features=["derive"] }
uuid = { version="0.8", features=["v4", "serde"] }
futures = { version="0.3" }
diesel = { version="1.4.5", features=["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_derives = { version="1.0", features=["postgres"] }
chrono = { version="0.4", features=["serde"] }
warp = "0.2.5"
log = "0.4"
pretty_env_logger = "0.4.0"