[package]
name = "server"
version = "0.1.0"
authors = ["Edward Lee <edwardlee.259@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features=["serde"] }
diesel = { version="1.4.5", features=["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_derives = { version="1.0", features=["postgres"] }
futures = { version="0.3" }
jsonwebtoken = "7.2"
log = "0.4"
pretty_env_logger = "0.4.0"
rand = "0.7"
rust-crypto = "^0.2"
base64="0.13"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
tokio = { version="0.2", features=["full"] }
uuid = { version="0.8", features=["v4", "serde"] }
warp = "0.2.5"